removed the one of slides

--- a/slider-with-two-different-sidebars/index.html
+++ b/slider-with-two-different-sidebars/index.html
@@ -147,44 +147,6 @@
               </div>
             </div>
           </div>
-
-          <div class="swiper-slide">
-            <div class="gradient"></div>
-            <h1 data-animate="bottom" class="title">Katy Perry</h1>
-            <img class="hero" src="images/katy-perry.png" alt="katy perry" />
-            <div class="box-container">
-              <div data-animate="bottom" class="box songs">
-                <h1 style="align-self: center">Songs</h1>
-                <img src="images/this-is-how-we-do.png" alt="" />
-                <h3>Katy Perry</h3>
-                <p>This is How We Do</p>
-                <button class="more-btn" data-modal="katy-songs">
-                  <ion-icon
-                    class="more-btn-icon"
-                    name="add-circle-outline"></ion-icon>
-                </button>
-              </div>
-              <div class="box-mobile" data-modal="katy-songs">
-                <h1 style="align-self: center">Songs</h1>
-              </div>
-              <div data-animate="bottom" class="box overview">
-                <h1 style="align-self: center">Overview</h1>
-                <p>
-                  Katy Perry is a famous singer and songwriter from the United
-                  States. She was born on October 25, 1984, in Santa Barbara,
-                  California...
-                </p>
-                <button class="more-btn" data-modal="katy-bio">
-                  <ion-icon
-                    class="more-btn-icon"
-                    name="add-circle-outline"></ion-icon>
-                </button>
-              </div>
-              <div class="box-mobile" data-modal="katy-bio">
-                <h1 style="align-self: center">Overview</h1>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -461,102 +423,6 @@
         </div>
       </div>
     </div>
-
-    <div class="sidebar" id="katy-songs">
-      <div class="sidebar-container song-list-container">
-        <div class="sidebar-header">
-          <button class="close-btn">
-            <ion-icon class="close-icon" name="arrow-back-outline"></ion-icon
-            >Back
-          </button>
-        </div>
-        <div class="song-list-body">
-          <h1>Songs</h1>
-          <div class="song-item">
-            <img src="song-list/this-is-how-we-do.png" alt="" />
-            <div class="song-title">
-              <h4>This is How We Do</h4>
-              <p>Katy Perry</p>
-            </div>
-            <a href="#">
-              <ion-icon class="play-icon" name="play-circle-outline"></ion-icon
-            ></a>
-          </div>
-
-          <div class="song-item">
-            <img src="song-list/roar.png" alt="" />
-            <div class="song-title">
-              <h4>Roar</h4>
-              <p>Katy Perry</p>
-            </div>
-            <a href="#">
-              <ion-icon class="play-icon" name="play-circle-outline"></ion-icon
-            ></a>
-          </div>
-
-          <div class="song-item">
-            <img src="song-list/firework.png" alt="" />
-            <div class="song-title">
-              <h4>Firework</h4>
-              <p>Katy Perry</p>
-            </div>
-            <a href="#">
-              <ion-icon class="play-icon" name="play-circle-outline"></ion-icon
-            ></a>
-          </div>
-
-          <div class="song-item">
-            <img src="song-list/hot-n-cold.png" alt="" />
-            <div class="song-title">
-              <h4>Hot N Cold</h4>
-              <p>Katy Perry</p>
-            </div>
-            <a href="#">
-              <ion-icon class="play-icon" name="play-circle-outline"></ion-icon
-            ></a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="sidebar" id="katy-bio">
-      <div class="sidebar-container">
-        <div class="sidebar-header">
-          <button class="close-btn">
-            <ion-icon class="close-icon" name="arrow-back-outline"></ion-icon
-            >Back
-          </button>
-        </div>
-        <div class="sidebar-body">
-          <img src="images/katy-perry-bio.jpg" alt="" />
-          <p>
-            Katy Perry is a famous singer and songwriter from the United States.
-            She was born on October 25, 1984, in Santa Barbara, California. Her
-            real name is Katheryn Elizabeth Hudson. Katy's love for music
-            started at a young age, and she began singing in church when she was
-            a child. She even released a Christian music album under her real
-            name before becoming Katy Perry.
-          </p>
-          <p>
-            In 2008, Katy Perry released her breakthrough single "I Kissed a
-            Girl," which became a massive hit. This song, along with her album
-            "One of the Boys," made her a music star. She is known for her pop
-            music and colorful, creative music videos.
-          </p>
-          <p>
-            One of her most famous songs is "Firework," which became an anthem
-            of self-empowerment and hope. Katy's music is catchy and fun, and
-            many people around the world enjoy it.
-          </p>
-          <p>
-            She has won several awards for her music, including Grammy Awards.
-            Katy Perry is also known for her unique style and costumes, often
-            appearing in eye-catching outfits.
-          </p>
-        </div>
-      </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
       type="module"
@@ -564,6 +430,6 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
