fixed the h3 tag

--- a/halloween-parallax/index.html
+++ b/halloween-parallax/index.html
@@ -23,20 +23,24 @@
     </section>
 
     <section class="blog">
-      <h3>Activities</h2>
+      <h3>Activities</h3>
 
       <!-- Swiper -->
-      <div
-        style="--swiper-pagination-color: #fff"
-        class="swiper mySwiper">
+      <div style="--swiper-pagination-color: #fff" class="swiper mySwiper">
         <div class="parallax-bg" data-swiper-parallax="-23%"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="content">
-              <div class="title" data-content="Ghastly Ghost Tours" data-swiper-parallax="-500">
+              <div
+                class="title"
+                data-content="Ghastly Ghost Tours"
+                data-swiper-parallax="-500">
                 Ghastly Ghost Tours
               </div>
-              <div class="text" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">
+              <div
+                class="text"
+                data-swiper-parallax="-300"
+                data-swiper-parallax-opacity="0">
                 <p>
                   Explore the dark history of Ravenwood Manor with guided tours
                   through its haunted halls. Who knows what you might encounter
@@ -51,10 +55,16 @@
 
           <div class="swiper-slide">
             <div class="content">
-              <div class="title" data-content="Wicked Costume Contest" data-swiper-parallax="-500">
+              <div
+                class="title"
+                data-content="Wicked Costume Contest"
+                data-swiper-parallax="-500">
                 Wicked Costume Contest
               </div>
-              <div class="text" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">
+              <div
+                class="text"
+                data-swiper-parallax="-300"
+                data-swiper-parallax-opacity="0">
                 <p>
                   Dress to impress in your most scary, creative, or weird
                   Halloween costume. Prizes will be awarded to the best-dressed
@@ -69,10 +79,16 @@
 
           <div class="swiper-slide">
             <div class="content">
-              <div class="title" data-content="Spooky Dance Floor" data-swiper-parallax="-500">
+              <div
+                class="title"
+                data-content="Spooky Dance Floor"
+                data-swiper-parallax="-500">
                 Spooky Dance Floor
               </div>
-              <div class="text" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">
+              <div
+                class="text"
+                data-swiper-parallax="-300"
+                data-swiper-parallax-opacity="0">
                 <p>
                   Dance the night away to hauntingly good tunes from our live
                   DJ, under the dim glow of scary candlelight.
@@ -86,10 +102,16 @@
 
           <div class="swiper-slide">
             <div class="content">
-              <div class="title" data-content="Sinister Snacks" data-swiper-parallax="-500">
+              <div
+                class="title"
+                data-content="Sinister Snacks"
+                data-swiper-parallax="-500">
                 Sinister Snacks
               </div>
-              <div class="text" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">
+              <div
+                class="text"
+                data-swiper-parallax="-300"
+                data-swiper-parallax-opacity="0">
                 <p>
                   Satisfy your taste buds with a variety of spooky-themed snacks
                   and refreshments at our chillingly delightful food stalls.
@@ -103,10 +125,16 @@
 
           <div class="swiper-slide">
             <div class="content">
-              <div class="title" data-content="Scary Movie Screening" data-swiper-parallax="-500">
+              <div
+                class="title"
+                data-content="Scary Movie Screening"
+                data-swiper-parallax="-500">
                 Scary Movie Screening
               </div>
-              <div class="text" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">
+              <div
+                class="text"
+                data-swiper-parallax="-300"
+                data-swiper-parallax-opacity="0">
                 <p>
                   Sit back and relax in our indoor cinema as we showcase classic
                   horror films for your enjoyment.
@@ -120,10 +148,16 @@
 
           <div class="swiper-slide">
             <div class="content">
-              <div class="title" data-content="Pumpkin Carving" data-swiper-parallax="-500">
+              <div
+                class="title"
+                data-content="Pumpkin Carving"
+                data-swiper-parallax="-500">
                 Pumpkin Carving
               </div>
-              <div class="text" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">
+              <div
+                class="text"
+                data-swiper-parallax="-300"
+                data-swiper-parallax-opacity="0">
                 <p>
                   Get your hands dirty and create your own Jack-O'-Lantern
                   masterpiece. We provide the pumpkins and carving tools.
